--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_751f1373dc43618"
   },
   "dependencies": {
     "jgdesign": "^2.0.36",
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chromatic": "^11.20.2",
     "postcss": "^8",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.1",
