--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,38 +1,40 @@
-# Workflow name
 name: 'Chromatic Deployment'
 
-# Event for the workflow
-on: push
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
-# List of jobs
 jobs:
-  test:
-    # Operating System
+  chromatic:
     runs-on: ubuntu-latest
-    # Job steps
     steps:
-      - uses: actions/checkout@v1
-      - run: yarn
-        #👇 Adds Chromatic as a step in the workflow
-      - uses: chromaui/action@v1
-        # Options required for Chromatic's GitHub Action
-        with:
-          #👇 Chromatic projectToken, see https://storybook.js.org/tutorials/intro-to-storybook/react/ko/deploy/ to obtain it
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      # 코드 체크아웃
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-jobs:
-  storybook:
-    runs-on: ubuntu-20.04
-    outputs:
-      status: ${{ job.status }}
-    steps:
-    
-     ...
-     
-      - name: comment PR
+      # Node.js 설치
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      # 의존성 설치 (yarn 사용)
+      - name: Install dependencies
+        run: yarn
+
+      # Chromatic 실행
+      - name: Publish Storybook to Chromatic
+        uses: chromaui/action@v1
+        with:
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+
+      # Pull Request에 Storybook URL 댓글 추가
+      - name: Comment on PR
+        if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          message: "🚀storybook: ${{ steps.chromatic.outputs.storybookUrl }}"
+          message: "🚀 [Storybook Preview](${{ steps.chromatic.outputs.storybookUrl }})"
